Fixed bug: Background footer with overflow

--- a/styles/partials/page-study.css
+++ b/styles/partials/page-study.css
@@ -46,6 +46,7 @@
 
 .teacher-item {
   margin-top: 2.4rem;
+  overflow: hidden;
   border: 1px solid var(--color-line-in-white);
   border-radius: 0.8rem;
   background-color: var(--color-box-base);
